fix(CustomScrollView): Добавить возможность скрывать scrollbar
fix(CustomSelect): Simplify condition in findIndexBefore

fix(CustomScrollView): Добавить возможность скрывать scrollbar - refactor with PR notes

--- a/src/components/CustomScrollView/CustomScrollView.css
+++ b/src/components/CustomScrollView/CustomScrollView.css
@@ -44,6 +44,11 @@
   user-select: none;
 }
 
+.CustomScrollView__trackerY--hidden {
+  opacity: 0;
+  transition: opacity 200ms;
+}
+
 .CustomScrollView__trackerY::before {
   content: "";
   opacity: 0.28;
